2007-05-17  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/playlist/playlistparser.py:
	  Throttle discoverer rate to avoid using too much cpu when adding a
	  long playlist.

2007-05-16  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/admin.py (AdminHeaven): Fix #107: kill dead
	code.

	* flumotion/configure/uninstalled.py.in (get): 
	* flumotion/configure/installed.py.in (get): If FLU_CACHE_DIR is
	set, read and write our cache (bundle, connections) and registry
	data there. Fixes #102.

2007-05-16  Andy Wingo  <wingo@pobox.com>

	Patch by: Gergely Nagy
	
	* flumotion/component/encoders/theora/theora.xml: 
	* flumotion/component/encoders/theora/theora.py
	(Theora.configure_pipeline): Add support for sharpness parameter.

	* data/glade/wizard_theora.glade: 
	* flumotion/wizard/steps.py (Theora.get_state): Add Advanced
	settings area to the Theora encoder wizard page. Fixes #74.

2007-05-16  Andy Wingo  <wingo@pobox.com>

	* flumotion/wizard/wizard.py
	(Wizard.require_elements.got_missing_elements): Return the missing
	elements from the deferred.

	* flumotion/wizard/steps.py (Overlay.worker_changed_010): Reflow.
	(HTTP.worker_changed.got_missing, HTTP.verify, HTTP.activated)
	(on_entry_mount_point_changed): There are two things that can
	prevent next from being pressed, lack of multifdsink and lack of a
	mount point. Make sure that both are necessary conditions for
	next. Fixes #68.

2007-05-16  Andy Wingo  <wingo@pobox.com>

	* data/glade/Makefile.am (glade_DATA): Fix distcheck.

	* flumotion/wizard/steps.py (Vorbis.get_state, Speex.get_state):
	Apparently a kilobit is 1000 bits? According to Mike?
	(HTTP.get_state): When the user says 10 megabits, she does not
	mean 10 bits.

2007-05-16  Michael Smith <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  The wizard used (and still does, actually) set bandwidth-limit to
	  unreasonably low values, thinking it was in Mb/s (it's b/s).